# Joblisting-Webscraper

./: .gitignore  README.md  elements.py  job_webscraper.ipynb  joblisting_webscraper.ipynb  locators.py  pyproject.toml  requirements.txt  webscraper.py
diagrams/: filter_pipeline.eddx  filters.eddx  pipeline_diagram.eddx  structure.eddx
src/: elements.py  joblisting_webscraper.ipynb  locators.py  tutorial.ipynb  webscraper.py
